--- a/ClientApp/app/components/home/home.component.html
+++ b/ClientApp/app/components/home/home.component.html
@@ -1,5 +1,7 @@
 <h1>asp.NET Core - Angular2 Universal - Starter</h1>
 
 <ul>
-    <li>Webpack</li> 
+    <li>Webpack</li>
+    <li>Stuff</li>
+    <li>ok about other stuff</li>
 </ul>
