--- a/ClientApp/containers/counter/counter.component.html
+++ b/ClientApp/containers/counter/counter.component.html
@@ -1,6 +1,6 @@
 <h2>Counter</h2>
 
-<p>This is a simple example of an Angular 2 component.</p>
+<p>Test</p>
 
 <p>Current count: <strong>{{ currentCount }}</strong></p>
 
