--- a/ClientApp/containers/fetchdata/fetchdata.component.html
+++ b/ClientApp/containers/fetchdata/fetchdata.component.html
@@ -19,6 +19,7 @@
             <td>{{ forecast.temperatureC }}</td>
             <td>{{ forecast.temperatureF }}</td>
             <td>{{ forecast.summary }}</td>
+            <td>{{ someNonExistentFunction() }}</td>
         </tr>
     </tbody>
 </table>
