cleanup :tada::sparkles:

--- a/ClientApp/containers/counter/counter.component.html
+++ b/ClientApp/containers/counter/counter.component.html
@@ -1,7 +1,5 @@
-<h2>Counter</h2>
+<h2>Socket Test:</h2>
 
-<p>Test</p>
 
-<p>Current count: <strong>{{ currentCount }}</strong></p>
 
-<button (click)="incrementCounter()">Increment</button>
+<button (click)="incrementCounter()">Send message to Socket Handler</button>
