--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,8 +2,10 @@
     ViewData["Title"] = "Home Page";
 }
 
-<app asp-prerender-module="ClientApp/boot-server"
-     asp-prerender-webpack-config="webpack.config.js">Loading...</app>
+<app asp-prerender-webpack-config="webpack.config.js">Loading...</app>
+
+@*<app asp-prerender-module="ClientApp/boot-server"
+     asp-prerender-webpack-config="webpack.config.js">Loading...</app>*@
  
 <script src="~/dist/vendor.js" asp-append-version="true"></script>
 @section scripts {
