:sparkles: Update time

--- a/ClientApp/components/navmenu/navmenu.component.html
+++ b/ClientApp/components/navmenu/navmenu.component.html
@@ -7,24 +7,24 @@
                 <span class='icon-bar'></span>
                 <span class='icon-bar'></span>
             </button>
-            <a class='navbar-brand' [routerLink]="['/home']">Angular2 Starter</a>
+            <a class='navbar-brand' [routerLink]="['/home']">asp.NET Core & Angular2 Starter</a>
         </div>
         <div class='clearfix'></div>
         <div class='navbar-collapse collapse'>
             <ul class='nav navbar-nav'>
                 <li [routerLinkActive]="['link-active']">
                     <a [routerLink]="['/home']">
-                        <span class='glyphicon glyphicon-home'></span> Home
+                        <span class='glyphicon glyphicon-home'></span> NantHealth | Home
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/counter']">
-                        <span class='glyphicon glyphicon-education'></span> Counter
+                    <a [routerLink]="['/rest-test']">
+                        <span class='glyphicon glyphicon-education'></span> RestAPI Test Page
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/fetch-data']">
-                        <span class='glyphicon glyphicon-th-list'></span> Fetch data
+                    <a [routerLink]="['/websocket-test']">
+                        <span class='glyphicon glyphicon-th-list'></span> WebSocket Test Page
                     </a>
                 </li>
             </ul>
