--- a/ClientApp/containers/rest-test/rest-test.component.html
+++ b/ClientApp/containers/rest-test/rest-test.component.html
@@ -1,10 +1,10 @@
-<h1>Weather forecast</h1>
+<h1>This is a RestAPI Example (hitting WebAPI in our case)</h1>
 
-<p>This component demonstrates fetching data from the server.</p>
+<p>Let's get some stuff from the server!</p>
 
 <p *ngIf="!forecasts"><em>Loading...</em></p>
 
-<table class='table' *ngIf="forecasts">
+<table class="table" *ngIf="forecasts">
     <thead>
         <tr>
             <th>Date</th>
@@ -19,7 +19,6 @@
             <td>{{ forecast.temperatureC }}</td>
             <td>{{ forecast.temperatureF }}</td>
             <td>{{ forecast.summary }}</td>
-            <td>{{ someNonExistentFunction() }}</td>
         </tr>
     </tbody>
 </table>
