Add ts2 PATHS for shared/components/containers

--- a/ClientApp/containers/websocket-test/websocket-test.component.html
+++ b/ClientApp/containers/websocket-test/websocket-test.component.html
@@ -2,7 +2,8 @@
 
 <blockquote>
     <strong>NOTE:</strong>
-    This isn't working completely yet!! At the moment it's shut off.<br>
+    At the moment it's shut off.<br>
+    This isn't working completely yet!! 
     Disregard this page at the moment 
 </blockquote>
 
