--- a/ClientApp/components/navmenu/navmenu.component.html
+++ b/ClientApp/components/navmenu/navmenu.component.html
@@ -1,33 +1,18 @@
-<div class='main-nav'>
-    <div class='navbar navbar-inverse'>
-        <div class='navbar-header'>
-            <button type='button' class='navbar-toggle' data-toggle='collapse' data-target='.navbar-collapse'>
-                <span class='sr-only'>Toggle navigation</span>
-                <span class='icon-bar'></span>
-                <span class='icon-bar'></span>
-                <span class='icon-bar'></span>
-            </button>
-            <a class='navbar-brand' [routerLink]="['/home']">asp.NET Core & Angular2 Starter</a>
-        </div>
-        <div class='clearfix'></div>
-        <div class='navbar-collapse collapse'>
-            <ul class='nav navbar-nav'>
-                <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/home']">
-                        <span class='glyphicon glyphicon-home'></span> NantHealth | Home
-                    </a>
-                </li>
-                <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/rest-test']">
-                        <span class='glyphicon glyphicon-education'></span> RestAPI Test Page
-                    </a>
-                </li>
-                <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/websocket-test']">
-                        <span class='glyphicon glyphicon-th-list'></span> WebSocket Test Page
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</div>
+
+<ul class="nav">
+    <li [routerLinkActive]="['link-active']">
+        <a [routerLink]="['/home']">
+            <span class="glyphicon glyphicon-home"></span> NantHealth | Home
+        </a>
+    </li>
+    <li [routerLinkActive]="['link-active']">
+        <a [routerLink]="['/rest-test']">
+            <span class="glyphicon glyphicon-education"></span> RestAPI Test Page
+        </a>
+    </li>
+    <li [routerLinkActive]="['link-active']">
+        <a [routerLink]="['/websocket-test']">
+            <span class="glyphicon glyphicon-th-list"></span> WebSocket Test Page
+        </a>
+    </li>
+</ul>
