--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = ".NET Core + Angular + Universal !";
 }
 
-<app asp-prerender-module="ClientApp/boot-server"
+<app asp-prerender-module="Client/bootstrap-server"
      asp-prerender-webpack-config="webpack.config.js">Loading...</app>
  
 <script src="~/dist/vendor.js" asp-append-version="true"></script>
