--- a/Client/components/navmenu/navmenu.component.html
+++ b/Client/components/navmenu/navmenu.component.html
@@ -2,7 +2,7 @@
 <ul class="nav">
     <li [routerLinkActive]="['link-active']">
         <a [routerLink]="['/home']">
-            <span class="glyphicon glyphicon-home"></span> NantHealth | Home
+            <span class="glyphicon glyphicon-home"></span> Home
         </a>
     </li>
     <li [routerLinkActive]="['link-active']">
