--- a/Client/containers/home/home.component.html
+++ b/Client/containers/home/home.component.html
@@ -1,4 +1,5 @@
-<h1>asp.NET Core - Angular2 Universal - Starter</h1>
+
+<h1>ASP.NET Core - Angular2 Universal - Starter</h1>
 
 <ul>
     <li>Webpack</li>
