--- a/Client/containers/home/home.component.html
+++ b/Client/containers/home/home.component.html
@@ -1,9 +1,49 @@
 
-<h1>ASP.NET Core - Angular2 Universal - Starter</h1>
+<h1>Official Angular2 Universal & ASP.NET Core starter-kit</h1>
+
+<blockquote>
+    <strong>Enjoy the latest features from .NET Core & Angular2!</strong>
+    <br>
+    <a href="https://github.com/MarkPieszak/aspnetcore-angular2-starter">Github repo here</a>
+
+
+</blockquote>
+
+<h2>What does this Starter offer? </h2>
 
 <ul>
-    <li>Webpack</li>
-    <li>Stuff</li>
-    <li>ok about other stuff</li>
-    <li>Stuff</li>
+    <li>ASP.NET Core 1.0.1</li>
+    <li>Angular 2.* front-end UI framework
+        <ul>
+            <li><a href="https://github.com/angular/universal">Universal</a> - server-side rendering for SEO, deep-linking, and incredible performance.</li>
+            <li>NgRx - Redux architecture (UPCOMING)</li>
+            <li>HMR State Management - Don't lose your applications state during HMR! (UPCOMING)</li>
+            <li>AoT (Ahead-of-time) production compilation for even faster prod builds. (UPCOMING)</li>
+        </ul>
+    </li>
+    <li>
+        The latest TypeScript 2.* features
+        <ul>
+            <li>
+                "Path" support example - create your own custom directory paths to avoid `../../` directory diving.<br />
+                Check the <a href="https://github.com/MarkPieszak/aspnetcore-angular2-starter/blob/master/tsconfig.json">tsconfig</a> to see how they are setup.
+            </li>
+        </ul>
+    </li>
+    <li>
+        Webpack 2 (current in Beta)
+        <ul>
+            <li>TS2 aware path support</li>
+            <li>Tree-shaking (UPCOMING)</li>
+            <li>Hot Module Reloading/Replacement for an amazing dev experience.</li>
+        </ul>
+    </li>
+    <li>Google Material Design</li>
+</ul>
+
+<h2>Having issues?</h2>
+
+<ul>
+    <li>Issues with this Starter? <br>Please post an issue here: <a href="https://github.com/MarkPieszak/aspnetcore-angular2-starter">AspNetCore-Angular2-Starter repo</a><br><br></li>
+    <li>Issues with Universal itself? <br>Please post an issue here: <a href="https://github.com/angular/universal">Angular Universal repo</a></li>
 </ul>
