:space_invader: Add ng2-bootstrap demo

--- a/Client/components/navmenu/navmenu.component.html
+++ b/Client/components/navmenu/navmenu.component.html
@@ -6,13 +6,18 @@
         </a>
     </li>
     <li [routerLinkActive]="['link-active']">
+        <a [routerLink]="['/bootstrap']">
+            <span class="glyphicon glyphicon-education"></span> Bootstrap Demo
+        </a>
+    </li>
+    <li [routerLinkActive]="['link-active']">
         <a [routerLink]="['/rest-test']">
-            <span class="glyphicon glyphicon-education"></span> RestAPI Test Page
+            <span class="glyphicon glyphicon-education"></span> RestAPI Demo
         </a>
     </li>
     <li [routerLinkActive]="['link-active']">
         <a [routerLink]="['/websocket-test']">
-            <span class="glyphicon glyphicon-th-list"></span> WebSocket Test Page
+            <span class="glyphicon glyphicon-th-list"></span> WebSocket Demo (disabled currently)
         </a>
     </li>
 </ul>
