--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
         <title>@ViewData["Title"] - Angular2 ASPNET Core - Starter</title>
         <base href="/" />
 
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+
         @*<link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />*@
 
     </head>
