--- a/Client/containers/home/home.component.html
+++ b/Client/containers/home/home.component.html
@@ -4,46 +4,56 @@
 <blockquote>
     <strong>Enjoy the latest features from .NET Core & Angular2!</strong>
     <br>
-    <a href="https://github.com/MarkPieszak/aspnetcore-angular2-starter">Github repo here</a>
+    For more info check the repo here: <a href="https://github.com/MarkPieszak/aspnetcore-angular2-starter">AspNetCore-Angular2-Starter repo</a>
 
-
+    <br><br>
+    <strong>NOTE: Currently Angular Core 2.1.1+ are not functional with Universal. Fix coming soon.</strong>
 </blockquote>
 
-<h2>What does this Starter offer? </h2>
-
-<ul>
-    <li>ASP.NET Core 1.0.1</li>
-    <li>Angular 2.* front-end UI framework
+<div class="row">
+    <div class="col-lg-6">
+        <h2>What does this Starter offer? </h2>
         <ul>
-            <li><a href="https://github.com/angular/universal">Universal</a> - server-side rendering for SEO, deep-linking, and incredible performance.</li>
-            <li>NgRx - Redux architecture (UPCOMING)</li>
-            <li>HMR State Management - Don't lose your applications state during HMR! (UPCOMING)</li>
-            <li>AoT (Ahead-of-time) production compilation for even faster prod builds. (UPCOMING)</li>
-        </ul>
-    </li>
-    <li>
-        The latest TypeScript 2.* features
-        <ul>
+            <li>ASP.NET Core 1.0.1</li>
             <li>
-                "Path" support example - create your own custom directory paths to avoid `../../` directory diving.<br />
-                Check the <a href="https://github.com/MarkPieszak/aspnetcore-angular2-starter/blob/master/tsconfig.json">tsconfig</a> to see how they are setup.
+                Angular 2.* front-end UI framework
+                <ul>
+                    <li><a href="https://github.com/angular/universal">Universal</a> - server-side rendering for SEO, deep-linking, and incredible performance.</li>
+                    <li>NgRx - Redux architecture (UPCOMING)</li>
+                    <li>HMR State Management - Don't lose your applications state during HMR! (UPCOMING)</li>
+                    <li>AoT (Ahead-of-time) production compilation for even faster prod builds. (UPCOMING)</li>
+                </ul>
             </li>
+            <li>
+                The latest TypeScript 2.* features
+                <ul>
+                    <li>
+                        "Path" support example - create your own custom directory paths to avoid `../../` directory diving.<br />
+                        Check the <a href="https://github.com/MarkPieszak/aspnetcore-angular2-starter/blob/master/tsconfig.json">tsconfig</a> to see how they are setup.
+                    </li>
+                </ul>
+            </li>
+            <li>
+                Webpack 2 (current in Beta)
+                <ul>
+                    <li>TS2 aware path support</li>
+                    <li>Tree-shaking (UPCOMING)</li>
+                    <li>Hot Module Reloading/Replacement for an amazing dev experience.</li>
+                </ul>
+            </li>
+            <li>Bootstrap (ng2-bootstrap) : Bootstrap capable of being rendered even on the server.</li>
+            <li>Unit testing via karma & jasmine. (UPCOMING)</li>
+            <li>e2e testing via protractor. (UPCOMING)</li>
         </ul>
-    </li>
-    <li>
-        Webpack 2 (current in Beta)
+    </div>
+
+    <div class="col-lg-6">
+        <h2>Having issues?</h2>
+
         <ul>
-            <li>TS2 aware path support</li>
-            <li>Tree-shaking (UPCOMING)</li>
-            <li>Hot Module Reloading/Replacement for an amazing dev experience.</li>
+            <li><strong>Issues with this Starter?</strong> <br>Please post an issue here: <a href="https://github.com/MarkPieszak/aspnetcore-angular2-starter">AspNetCore-Angular2-Starter repo</a><br><br></li>
+            <li><strong>Issues with <u>Universal</u> itself?</strong> <br>Please post an issue here: <a href="https://github.com/angular/universal">Angular Universal repo</a></li>
         </ul>
-    </li>
-    <li>Google Material Design</li>
-</ul>
+    </div>
 
-<h2>Having issues?</h2>
-
-<ul>
-    <li>Issues with this Starter? <br>Please post an issue here: <a href="https://github.com/MarkPieszak/aspnetcore-angular2-starter">AspNetCore-Angular2-Starter repo</a><br><br></li>
-    <li>Issues with Universal itself? <br>Please post an issue here: <a href="https://github.com/angular/universal">Angular Universal repo</a></li>
-</ul>
+</div>
