--- a/Client/containers/home/home.component.html
+++ b/Client/containers/home/home.component.html
@@ -1,5 +1,5 @@
 
-<h1>Official Angular2 Universal & ASP.NET Core starter-kit</h1>
+<h1>* Official * Angular2 Universal & ASP.NET Core starter-kit</h1>
 
 <blockquote>
     <strong>Enjoy the latest features from .NET Core & Angular2!</strong>
