update ts & packages

--- a/Client/containers/home/home.component.html
+++ b/Client/containers/home/home.component.html
@@ -36,13 +36,13 @@
                 Webpack 2 (current in Beta)
                 <ul>
                     <li>TS2 aware path support</li>
-                    <li>Tree-shaking (UPCOMING)</li>
                     <li>Hot Module Reloading/Replacement for an amazing dev experience.</li>
+                    <li>Tree-shaking (UPCOMING)</li>
                 </ul>
             </li>
             <li>Bootstrap (ng2-bootstrap) : Bootstrap capable of being rendered even on the server.</li>
-            <li>Unit testing via karma & jasmine. (UPCOMING)</li>
-            <li>e2e testing via protractor. (UPCOMING)</li>
+            <li>Unit testing via karma & jasmine.</li>
+            <li>e2e testing via protractor.</li>
         </ul>
     </div>
 
