fix(tslint): fix codelyzer errors
Also make note of how to use Codelyzer in Visual Studio 2015

--- a/Client/app/app.component.html
+++ b/Client/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="container-fluid">
-    <nav-menu></nav-menu>
+    <app-nav-menu></app-nav-menu>
     <router-outlet></router-outlet>
 </div>
