add NgRx, HMR state management, Redux dev tools
Closes #2 #3 #13

--- a/Client/components/navmenu/navmenu.component.html
+++ b/Client/components/navmenu/navmenu.component.html
@@ -15,4 +15,13 @@
             <span class="glyphicon glyphicon-education"></span> RestAPI Demo
         </a>
     </li>
+    <li *ngIf="!loggedIn$" [routerLinkActive]="['link-active']">
+        <a [routerLink]="['/login']">
+            <span class="glyphicon glyphicon-user"></span> Login
+        </a>
+    </li>
+    <li *ngIf="loggedIn$" (click)="logout()">
+        <a [routerLink]="['/']">
+        </a>
+    </li>
 </ul>
