fix hmr state & create common ngmodule

--- a/Client/containers/home/home.component.html
+++ b/Client/containers/home/home.component.html
@@ -18,8 +18,8 @@
                 Angular 2.* front-end UI framework
                 <ul>
                     <li><a href="https://github.com/angular/universal">Universal</a> - server-side rendering for SEO, deep-linking, and incredible performance.</li>
-                    <li>NgRx - Redux architecture (UPCOMING)</li>
-                    <li>HMR State Management - Don't lose your applications state during HMR! (UPCOMING)</li>
+                    <li>NgRx - Redux architecture</li>
+                    <li>HMR State Management - Don't lose your applications state during HMR!</li>
                     <li>AoT (Ahead-of-time) production compilation for even faster prod builds. (UPCOMING)</li>
                 </ul>
             </li>
