feature(examples): showcase platform DI examples
closes #22

--- a/Client/components/navmenu/navmenu.component.html
+++ b/Client/components/navmenu/navmenu.component.html
@@ -6,6 +6,11 @@
         </a>
     </li>
     <li [routerLinkActive]="['link-active']">
+        <a [routerLink]="['/examples']">
+            <span class="glyphicon glyphicon-education"></span> Platform Examples
+        </a>
+    </li>
+    <li [routerLinkActive]="['link-active']">
         <a [routerLink]="['/bootstrap']">
             <span class="glyphicon glyphicon-education"></span> Bootstrap Demo
         </a>
