added animation example

--- a/Client/containers/rest-test/rest-test.component.html
+++ b/Client/containers/rest-test/rest-test.component.html
@@ -12,7 +12,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let user of users">
+        <tr *ngFor="let user of users" [@flyInOut]>
             <td>{{ user.id }}</td>
             <td>{{ user.name }}</td>
         </tr>
