feat(lazy-loading): showcase lazy-loading & chunking example
Webpack2 chunking & lazy-loading example
Closes #9

--- a/Client/components/navmenu/navmenu.component.html
+++ b/Client/components/navmenu/navmenu.component.html
@@ -20,6 +20,11 @@
             <span class="glyphicon glyphicon-education"></span> RestAPI Demo
         </a>
     </li>
+    <li [routerLinkActive]="['link-active']">
+        <a [routerLink]="['/faq']">
+            <span class="glyphicon glyphicon-education"></span> FAQ
+        </a>
+    </li>
     <li *ngIf="!loggedIn$" [routerLinkActive]="['link-active']">
         <a [routerLink]="['/login']">
             <span class="glyphicon glyphicon-user"></span> Login
