--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,9 +7,9 @@
         <title>@ViewData["Title"] - Angular2 ASPNET Core - Starter</title>
         <base href="/" />
 
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 
-        @*<link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />*@
+        <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
 
     </head>
 
