revert(ng2bootstrap): peg down to v1.1.16
#33 - have to keep it at 1.1.16 at the moment, 1.1.20 requires ng2.4.x
(which is currently unsupported by Universal at the moment) this ends
up breaking SSR, v16 works perfect.

--- a/Client/containers/home/home.component.html
+++ b/Client/containers/home/home.component.html
@@ -14,7 +14,7 @@
     <div class="col-lg-6">
         <h2>What does this Starter offer? </h2>
         <ul>
-            <li>ASP.NET Core 1.0.1</li>
+            <li>ASP.NET Core 1.1 :: (Currently VS2015 only) - .csproj 2017 version coming when closer to release</li>
             <li>
                 Angular 2.* front-end UI framework
                 <ul>
