fix(ts-lint): remove few tslint issues in repo
closes #42

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,8 +2,8 @@
     ViewData["Title"] = ".NET Core + Angular + Universal !";
 }
 
-<app asp-prerender-module="Client/bootstrap-server"
-     asp-prerender-webpack-config="webpack.config.js">Loading...</app>
+<app-root asp-prerender-module="Client/bootstrap-server"
+     asp-prerender-webpack-config="webpack.config.js">Loading...</app-root>
  
 
 <script src="~/dist/vendor.js" asp-append-version="true"></script>
