--- a/Client/components/navmenu/navmenu.component.css
+++ b/Client/components/navmenu/navmenu.component.css
@@ -1,4 +1,4 @@
-li .glyphicon {
+li .fa {
     margin-right: 10px;
 }
 
@@ -11,13 +11,9 @@ li.link-active a:focus {
 }
 
 /* Keep the nav menu independent of scrolling and on top of other items */
-.main-nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
-}
+.nav { }
+.nav li a { padding:10px 20px; }
+.nav li a:hover, .nav li a:focus { text-decoration: none; }
 
 @media (min-width: 768px) {
     /* On small screens, convert the nav menu to a vertical sidebar */
