--- a/Client/components/navmenu/navmenu.component.html
+++ b/Client/components/navmenu/navmenu.component.html
@@ -2,37 +2,37 @@
 <ul class="nav">
     <li [routerLinkActive]="['link-active']">
         <a [routerLink]="['/home']">
-            <span class="glyphicon glyphicon-home"></span> Home
+            <i class="fa fa-home" aria-hidden="true"></i> Home
         </a>
     </li>
     <li [routerLinkActive]="['link-active']">
         <a [routerLink]="['/examples']">
-            <span class="glyphicon glyphicon-education"></span> Platform Examples
+            <i class="fa fa-window-maximize" aria-hidden="true"></i> Platform Examples
         </a>
     </li>
     <li [routerLinkActive]="['link-active']">
         <a [routerLink]="['/bootstrap']">
-            <span class="glyphicon glyphicon-education"></span> Bootstrap Demo
+            <i class="fa fa-graduation-cap" aria-hidden="true"></i> Bootstrap Demo
         </a>
     </li>
     <li [routerLinkActive]="['link-active']">
         <a [routerLink]="['/rest-test']">
-            <span class="glyphicon glyphicon-education"></span> RestAPI Demo
+            <i class="fa fa-chrome" aria-hidden="true"></i> RestAPI Demo
         </a>
     </li>
     <li [routerLinkActive]="['link-active']">
         <a [routerLink]="['/faq']">
-            <span class="glyphicon glyphicon-education"></span> FAQ
+            <i class="fa fa-question-circle" aria-hidden="true"></i> FAQ
         </a>
     </li>
     <li *ngIf="!loggedIn$" [routerLinkActive]="['link-active']">
         <a [routerLink]="['/login']">
-            <span class="glyphicon glyphicon-user"></span> Login
+            <i class="fa fa-user" aria-hidden="true"></i> Login
         </a>
     </li>
     <li *ngIf="loggedIn$" (click)="logout()">
         <a [routerLink]="['/']">
-            <span class="glyphicon glyphicon-user"></span> Welcome, {{ user$.username }} - Logout
+            <i class="fa fa-user-circle-o" aria-hidden="true"></i> Welcome, {{ user$.username }} - Logout
         </a>
     </li>
 </ul>
