Change List-     - FontAwsome Added     - Template and CSS require system updated to angular2 from Commonjs for better usablity in Visual Studio (2015) error tracking     - "extract-text-webpack-plugin" version updated     - webpack.vendor file's extra unusable parts commented

--- a/Client/components/navmenu/navmenu.component.html
+++ b/Client/components/navmenu/navmenu.component.html
@@ -1,5 +1,4 @@
-
-<ul class="nav">
+<ul class="nav navbar-inverse">
     <li [routerLinkActive]="['link-active']">
         <a [routerLink]="['/home']">
             <i class="fa fa-home" aria-hidden="true"></i> Home
