feature(title-change): change title automatically on route change
Closes #32

Updated Root App Component, subscribing to NavigationEnd event and
changing Title through MetaService when route finishes changing.

Currently only works in Browser, as we're not supplying the entire Html
document. We'll have to look into fixing this later.

Routes now can contain a new property data : { title : 'whatever you
want' }, and it will automatically update the Title of the browser with
this

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>@ViewData["Title"] - Angular2 ASPNET Core - Starter</title>
+        <title>@ViewData["Title"] - Angular Universal & ASP.NET Core Starter</title>
         <base href="/" />
 <!--
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
