SignalR UI added

--- a/Client/containers/not-found/not-found.component.html
+++ b/Client/containers/not-found/not-found.component.html
@@ -5,7 +5,7 @@
           <br />
           <p>The page you requested could not be found, either contact your webmaster or try again. Use your browsers <b>Back</b> button to navigate to the page you have prevously come from</p>
           <p><b>Or you could just press this neat little button:</b></p>
-          <a href="#" class="btn btn-large btn-info"><i class="icon-home icon-white"></i> Take Me Home</a>
+          <a [routerLink]="['/home']" class="btn btn-large btn-info"><i class="icon-home icon-white"></i> Take Me Home</a>
         </div>
         <br />
         <!-- By ConnerT HTML & CSS Enthusiast -->
