style(app): updated styles & added faq from repo

--- a/Client/containers/rest-test/rest-test.component.html
+++ b/Client/containers/rest-test/rest-test.component.html
@@ -1,6 +1,9 @@
 <h1>This is a RestAPI Example (hitting WebAPI in our case)</h1>
 
-<p>Let's get some fake users from Rest:</p>
+<blockquote>
+    Let's get some fake users from Rest:<br>
+    You can find the Web API Routes in <code>{{ "/Server/Api/ ... "}}</code>
+</blockquote>
 
 <p *ngIf="!users"><em>Loading...</em></p>
 
