--- a/Client/components/navmenu/navmenu.component.html
+++ b/Client/components/navmenu/navmenu.component.html
@@ -26,7 +26,7 @@
     </li>
     <li [routerLinkActive]="['link-active']">
         <a [routerLink]="['/video-chat']">
-            <i class="fa fa-video-camera" aria-hidden="true"></i> WebRTC Video Chat
+            <i class="fa fa-video-camera" aria-hidden="true"></i> Example 404 Route
         </a>
     </li>
     <li [routerLinkActive]="['link-active']">
