--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,12 +2,13 @@
     ViewData["Title"] = ".NET Core + Angular + Universal !";
 }
 
-<app-root asp-prerender-module="Client/bootstrap-server"
-     asp-prerender-webpack-config="webpack.config.js">Loading...</app-root>
+<app-root asp-prerender-module="Client/dist/main-server">
+    ... Loading ...
+</app-root>
  
 
 <script src="~/dist/vendor.js" asp-append-version="true"></script>
 
 @section scripts {
-    <script src="~/dist/main.js" asp-append-version="true"></script>
+    <script src="~/dist/main-client.js" asp-append-version="true"></script>
 }
