chore(angular): bump to latest 2.4.7

--- a/Client/containers/+faq/faq.component.html
+++ b/Client/containers/+faq/faq.component.html
@@ -8,12 +8,9 @@
 <h2>How to add a route in the app:</h2>
 
 <ul>
-    <li>Create a folder in Client\Containers\</li>
-    <li>Create a component in the folder</li>
-    <li>Add the container in the Client\Containers\index.ts (this is the "barrels" file for all containers)</li>
-    <li>Add the container in the \Client\app\platform-modules\app.common.module.ts</li>
-    <li>Add the container in the \Client\app\app.routes.ts</li>
-    <li>How can I disable Universal / SSR (Server-side rendering)?</li>
+    <li>Create a folder & your Component in Client\Containers\</li>
+    <li>Add the Component to: Client\Containers\index.ts (this is the "barrels" file for all containers)</li>
+    <li>Add the Component to MODULES & ROUTES within: \Client\app\platform-modules\app.module.ts</li>
 </ul>
 
 <h2>How can I disable Universal / SSR (Server-side rendering)?</h2>
