--- a/src/AspCoreServer/Views/Shared/_Layout.cshtml
+++ b/src/AspCoreServer/Views/Shared/_Layout.cshtml
@@ -7,10 +7,7 @@
         <title>@ViewData["Title"] - Angular Universal & ASP.NET Core Starter</title>
         <base href="/" />
 
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-<!--
-        <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />-->
+        <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
 
     </head>
 
