added a new chat page

--- a/Client/app/containers/navmenu/navmenu.component.html
+++ b/Client/app/containers/navmenu/navmenu.component.html
@@ -27,6 +27,11 @@
                         <span class='glyphicon glyphicon-th-list'></span> Fetch data
                     </a>
                 </li>
+                <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/chat']">
+                        <span class='glyphicon glyphicon-comment'></span> Chat
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
