--- a/Client/app/containers/chat/chat.component.html
+++ b/Client/app/containers/chat/chat.component.html
@@ -1,1 +1,44 @@
 <h2>SignalR chat example</h2>
+
+<div class="row">
+    <div class="col-md-12">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <span class="glyphicon glyphicon-comment"></span> Chat
+            </div>
+            <div class="panel-body">
+                <ul class="chat">
+
+                    <li class="left clearfix" *ngFor="let message of chatMessages">
+                        <!--<span chatMessage="chat-img pull-left">
+                            <img src="http://placehold.it/50/55C1E7/fff&text=U" alt="User Avatar" class="img-circle" />
+                        </span>-->
+                        <div class="chat-body clearfix">
+                            <div class="header">
+                                <strong class="primary-font">{{message.user}}</strong>
+                                <small class="pull-right text-muted"><span class="glyphicon glyphicon-time"></span>x mins ago</small>
+                            </div>
+                            <p>
+                                {{message.content}}
+                            </p>
+                        </div>
+                    </li>
+
+                </ul>
+            </div>
+            <div class="panel-footer">
+                <div class="input-group">
+                    <span class="input-group-btn" style="padding-right: 10px; min-width: 150px;">
+                        <input id="btn-input" type="text" class="form-control input-sm" placeholder="username" />
+                    </span>
+                    <input id="btn-input" type="text" class="form-control input-sm" placeholder="Type your message here..." />
+                    <span class="input-group-btn ">
+                            <button class="btn btn-warning btn-sm" id="btn-chat"> Send</button> 
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<pre>{{chatMessages | json}}</pre>
