chore(home): update home component

--- a/Client/app/containers/home/home.component.html
+++ b/Client/app/containers/home/home.component.html
@@ -14,36 +14,36 @@
     <div class="col-lg-6">
         <h2>What does this Starter offer? </h2>
         <ul>
-            <li>ASP.NET Core 1.1 :: (Currently VS2015 only) - .csproj 2017 version coming when closer to release</li>
+            <li>ASP.NET Core 1.0 :: ( Visual Studio 2017 )</li>
             <li>
                 Angular 4.* front-end UI framework
                 <ul>
-                    <li><a href="https://github.com/angular/universal">Universal</a> - server-side rendering for SEO, deep-linking, and incredible performance.</li>
-                    <li>NgRx - Redux architecture</li>
+                    <li>Angular **platform-server** (Universal moved into Core here) - server-side rendering for SEO, deep-linking, and incredible performance.</li>
                     <li>HMR State Management - Don't lose your applications state during HMR!</li>
-                    <li>AoT (Ahead-of-time) production compilation for even faster prod builds. (UPCOMING)</li>
+                    <li>AoT (Ahead-of-time) production compilation for even faster prod builds.</li>
                 </ul>
             </li>
             <li>
                 The latest TypeScript 2.* features
-                <ul>
+                <!--<ul>
                     <li>
                         "Path" support example - create your own custom directory paths to avoid `../../` directory diving.<br />
                         Check the <a href="https://github.com/MarkPieszak/aspnetcore-angular2-universal/blob/master/tsconfig.json">tsconfig</a> to see how they are setup.
                     </li>
-                </ul>
+                </ul>-->
             </li>
             <li>
-                Webpack 2 (current in Beta)
+                Webpack 2
                 <ul>
-                    <li>TS2 aware path support</li>
+                    <!--<li>TS2 aware path support</li>-->
                     <li>Hot Module Reloading/Replacement for an amazing dev experience.</li>
-                    <li>Tree-shaking (UPCOMING)</li>
+                    <li>Tree-shaking</li>
                 </ul>
             </li>
+
             <li>Bootstrap (ng2-bootstrap) : Bootstrap capable of being rendered even on the server.</li>
             <li>Unit testing via karma & jasmine.</li>
-            <li>e2e testing via protractor.</li>
+            <!--<li>e2e testing via protractor.</li>-->
         </ul>
     </div>
 
@@ -52,7 +52,7 @@
 
         <ul>
             <li><strong>Issues with this Starter?</strong> <br>Please post an issue here: <a href="https://github.com/MarkPieszak/aspnetcore-angular2-universal">AspNetCore-Angular2-Universal repo</a><br><br></li>
-            <li><strong>Issues with <u>Universal</u> itself?</strong> <br>Please post an issue here: <a href="https://github.com/angular/universal">Angular Universal repo</a></li>
+            <!--<li><strong>Issues with <u>Universal</u> itself?</strong> <br>Please post an issue here: <a href="https://github.com/angular/universal">Angular Universal repo</a></li>-->
         </ul>
     </div>
 
