bug(chat): removed from demo for now

--- a/Client/app/components/navmenu/navmenu.component.html
+++ b/Client/app/components/navmenu/navmenu.component.html
@@ -27,11 +27,11 @@
                         <span class='glyphicon glyphicon-th-list'></span> Fetch data
                     </a>
                 </li>
-                <li [routerLinkActive]="['link-active']">
+                <!--<li [routerLinkActive]="['link-active']">
                     <a [routerLink]="['/chat']">
                         <span class='glyphicon glyphicon-comment'></span> Chat
                     </a>
-                </li>
+                </li>-->
             </ul>
         </div>
     </div>
