"Add new user" label added to user page

--- a/Client/app/containers/users/users.component.html
+++ b/Client/app/containers/users/users.component.html
@@ -30,7 +30,7 @@
             </td>
         </tr>
         <tr>
-            <td></td>
+            <td><b>Add new user</b></td>
             <td>
                 <input class="form-control" [(ngModel)]="newUserName" #newUser="ngModel" />
             </td>
