feat(AoT): :sparkles: :sparkles: added initial AoT support any many other things
Added Bootstrap with SCSS / SASS support
Added ng2-bootstrap
Passing Server originURL so that URLs can use it (when 4.1 comes out
with HttpInterceptors this will be even easier to do)

:sparkles: AoT added ! for prod (npm run build:aot)
- Still need to test this for Azure deployments etc

Removed es6-shim added core-js

--- a/Client/app/components/navmenu/navmenu.component.html
+++ b/Client/app/components/navmenu/navmenu.component.html
@@ -1,4 +1,4 @@
-<div class='main-nav'>
+﻿<div class='main-nav'>
     <div class='navbar'>
         <div class='navbar-header'>
             <button type='button' class='navbar-toggle' data-toggle='collapse' data-target='.navbar-collapse'>
@@ -24,9 +24,14 @@
                 </li>
                 <li [routerLinkActive]="['link-active']">
                     <a [routerLink]="['/users']">
-                        <span class='glyphicon glyphicon-user'></span> Users
+                        <span class='glyphicon glyphicon-user'></span> REST API Demo
                     </a>
                 </li>
+              <li [routerLinkActive]="['link-active']">
+                <a [routerLink]="['/ng2-bootstrap']">
+                  <span class='glyphicon glyphicon-user'></span> ng2-Bootstrap demo
+                </a>
+              </li>
                 <!--<li [routerLinkActive]="['link-active']">
                     <a [routerLink]="['/chat']">
                         <span class='glyphicon glyphicon-comment'></span> Chat
