--- a/Client/app/containers/home/home.component.html
+++ b/Client/app/containers/home/home.component.html
@@ -1,4 +1,4 @@
-
+﻿
 <h1>{{ title }}</h1>
 
 <blockquote>
@@ -14,13 +14,13 @@
     <div class="col-lg-6">
         <h2>What does this Starter offer? </h2>
         <ul>
-            <li>ASP.NET Core 1.0 :: ( Visual Studio 2017 )</li>
+            <li>ASP.NET Core 1.1 :: ( Visual Studio 2017 )</li>
             <li>
                 Angular 4.* front-end UI framework
                 <ul>
                     <li>Angular **platform-server** (Universal moved into Core here) - server-side rendering for SEO, deep-linking, and incredible performance.</li>
-                    <li>HMR State Management - Don't lose your applications state during HMR!</li>
-                    <li>AoT (Ahead-of-time) production compilation for even faster prod builds.</li>
+                    <!--<li>HMR State Management - Don't lose your applications state during HMR!</li>-->
+                    <li>AoT (Ahead-of-time) production compilation for even faster Prod builds.</li>
                 </ul>
             </li>
             <li>
@@ -36,7 +36,7 @@
                 Webpack 2
                 <ul>
                     <!--<li>TS2 aware path support</li>-->
-                    <li>Hot Module Reloading/Replacement for an amazing dev experience.</li>
+                    <li>Hot Module Reloading/Replacement for an amazing development experience.</li>
                     <li>Tree-shaking</li>
                 </ul>
             </li>
