--- a/Client/app/containers/home/home.component.html
+++ b/Client/app/containers/home/home.component.html
@@ -1,59 +1,76 @@
-﻿
-<h1>{{ title }}</h1>
+﻿<h1>
+  {{ title }}</h1>
 
 <blockquote>
-    <strong>Enjoy the latest features from .NET Core & Angular 4.0!</strong>
-    <br>
-    For more info check the repo here: <a href="https://github.com/MarkPieszak/aspnetcore-angular2-universal">AspNetCore-Angular2-Universal repo</a>
+  <strong>Enjoy the latest features from .NET Core & Angular 4.0!</strong>
+  <br> For more info check the repo here: <a href="https://github.com/MarkPieszak/aspnetcore-angular2-universal">AspNetCore-Angular2-Universal repo</a>
 
-    <br><br>
+  <br><br>
 </blockquote>
 
 
 <div class="row">
-    <div class="col-lg-6">
-        <h2>What does this Starter offer? </h2>
+  <div class="col-lg-6">
+    <h2>What does this Starter offer? </h2>
+    <ul>
+      <li>ASP.NET Core 1.1 :: ( Visual Studio 2017 )</li>
+      <li>
+        Angular 4.* front-end UI framework
         <ul>
-            <li>ASP.NET Core 1.1 :: ( Visual Studio 2017 )</li>
-            <li>
-                Angular 4.* front-end UI framework
-                <ul>
-                    <li>Angular **platform-server** (Universal moved into Core here) - server-side rendering for SEO, deep-linking, and incredible performance.</li>
-                    <!--<li>HMR State Management - Don't lose your applications state during HMR!</li>-->
-                    <li>AoT (Ahead-of-time) production compilation for even faster Prod builds.</li>
-                </ul>
-            </li>
-            <li>
-                The latest TypeScript 2.* features
-                <!--<ul>
+          <li>Angular **platform-server** (Universal moved into Core here) - server-side rendering for SEO, deep-linking, and
+            incredible performance.</li>
+          <!--<li>HMR State Management - Don't lose your applications state during HMR!</li>-->
+          <li>AoT (Ahead-of-time) production compilation for even faster Prod builds.</li>
+        </ul>
+      </li>
+      <li>
+        The latest TypeScript 2.* features
+        <!--<ul>
                     <li>
                         "Path" support example - create your own custom directory paths to avoid `../../` directory diving.<br />
                         Check the <a href="https://github.com/MarkPieszak/aspnetcore-angular2-universal/blob/master/tsconfig.json">tsconfig</a> to see how they are setup.
                     </li>
                 </ul>-->
-            </li>
-            <li>
-                Webpack 2
-                <ul>
-                    <!--<li>TS2 aware path support</li>-->
-                    <li>Hot Module Reloading/Replacement for an amazing development experience.</li>
-                    <li>Tree-shaking</li>
-                </ul>
-            </li>
-
-            <li>Bootstrap (ng2-bootstrap) : Bootstrap capable of being rendered even on the server.</li>
-            <li>Unit testing via karma & jasmine.</li>
-            <!--<li>e2e testing via protractor.</li>-->
-        </ul>
-    </div>
-
-    <div class="col-lg-6">
-        <h2>Having issues?</h2>
-
+      </li>
+      <li>
+        Webpack 2
         <ul>
-            <li><strong>Issues with this Starter?</strong> <br>Please post an issue here: <a href="https://github.com/MarkPieszak/aspnetcore-angular2-universal">AspNetCore-Angular2-Universal repo</a><br><br></li>
-            <!--<li><strong>Issues with <u>Universal</u> itself?</strong> <br>Please post an issue here: <a href="https://github.com/angular/universal">Angular Universal repo</a></li>-->
+          <!--<li>TS2 aware path support</li>-->
+          <li>Hot Module Reloading/Replacement for an amazing development experience.</li>
+          <li>Tree-shaking</li>
         </ul>
-    </div>
+      </li>
 
+      <li>Bootstrap (ng2-bootstrap) : Bootstrap capable of being rendered even on the server.</li>
+      <li>Unit testing via karma & jasmine.</li>
+      <!--<li>e2e testing via protractor.</li>-->
+    </ul>
+
+  </div>
+
+  <div class="col-lg-6">
+    <h2>Having issues?</h2>
+
+    <ul>
+      <li><strong>Issues with this Starter?</strong> <br>Please post an issue here: <a href="https://github.com/MarkPieszak/aspnetcore-angular2-universal">AspNetCore-Angular2-Universal repo</a><br><br></li>
+      <!--<li><strong>Issues with <u>Universal</u> itself?</strong> <br>Please post an issue here: <a href="https://github.com/angular/universal">Angular Universal repo</a></li>-->
+    </ul>
+  </div>
+
+</div>
+
+<div class="row">
+  <div class="col-lg-12">
+
+    <h2>Switch Language</h2>
+
+    <button class="btn btn-default">
+        <span class="flag-icon flag-icon-us"></span> English
+    </button>
+
+    <button class="btn btn-default">
+        <span class="flag-icon flag-icon-no"></span> Norwegian
+    </button>
+
+  </div>
 </div>
