some more translations

--- a/Client/app/components/navmenu/navmenu.component.html
+++ b/Client/app/components/navmenu/navmenu.component.html
@@ -19,7 +19,7 @@
         </li>
         <li [routerLinkActive]="['link-active']">
           <a [routerLink]="['/counter']">
-            <span class='glyphicon glyphicon-education'></span> Counter
+            <span class='glyphicon glyphicon-education'></span> {{ 'COUNTER' | translate }}
           </a>
         </li>
         <li [routerLinkActive]="['link-active']">
