--- a/Client/app/containers/home/home.component.html
+++ b/Client/app/containers/home/home.component.html
@@ -62,14 +62,14 @@
 <div class="row">
   <div class="col-lg-12">
 
-    <h2>Switch Language</h2>
+    <h2> {{ 'SWITCH_LANGUAGE' | translate }}</h2>
 
     <button class="btn btn-default">
-        <span class="flag-icon flag-icon-us"></span> English
+        <span class="flag-icon flag-icon-us"></span>  {{ 'ENGLISH' | translate }} 
     </button>
 
     <button class="btn btn-default">
-        <span class="flag-icon flag-icon-no"></span> Norwegian
+        <span class="flag-icon flag-icon-no"></span> {{ 'NORWEGIAN' | translate }} 
     </button>
 
   </div>
