--- a/Client/app/containers/home/home.component.html
+++ b/Client/app/containers/home/home.component.html
@@ -11,7 +11,7 @@
 
 <div class="row">
   <div class="col-lg-6">
-    <h2>What does this Starter offer? </h2>
+    <h2>{{ 'HOME_FEATURE_LIST_TITLE' | translate }} </h2>
     <ul>
       <li>ASP.NET Core 1.1 :: ( Visual Studio 2017 )</li>
       <li>
@@ -49,7 +49,7 @@
   </div>
 
   <div class="col-lg-6">
-    <h2>Having issues?</h2>
+    <h2>{{ 'HOME_ISSUES_TITLE' | translate }}</h2>
 
     <ul>
       <li><strong>Issues with this Starter?</strong> <br>Please post an issue here: <a href="https://github.com/MarkPieszak/aspnetcore-angular2-universal">AspNetCore-Angular2-Universal repo</a><br><br></li>
@@ -64,11 +64,11 @@
 
     <h2> {{ 'SWITCH_LANGUAGE' | translate }}</h2>
 
-    <button class="btn btn-default">
+    <button class="btn btn-default" (click)="setLanguage('en')">
         <span class="flag-icon flag-icon-us"></span>  {{ 'ENGLISH' | translate }} 
     </button>
 
-    <button class="btn btn-default">
+    <button class="btn btn-default" (click)="setLanguage('no')">
         <span class="flag-icon flag-icon-no"></span> {{ 'NORWEGIAN' | translate }} 
     </button>
 
