--- a/Client/app/components/navmenu/navmenu.component.html
+++ b/Client/app/components/navmenu/navmenu.component.html
@@ -1,43 +1,43 @@
 ﻿<div class='main-nav'>
-    <div class='navbar'>
-        <div class='navbar-header'>
-            <button type='button' class='navbar-toggle' data-toggle='collapse' data-target='.navbar-collapse'>
+  <div class='navbar'>
+    <div class='navbar-header'>
+      <button type='button' class='navbar-toggle' data-toggle='collapse' data-target='.navbar-collapse'>
                 <span class='sr-only'>Toggle navigation</span>
                 <span class='icon-bar'></span>
                 <span class='icon-bar'></span>
                 <span class='icon-bar'></span>
             </button>
-            <a class='navbar-brand' [routerLink]="['/home']">Angular 4 Universal & ASP.NET Core </a>
-        </div>
-        <div class='clearfix'></div>
-        <div class='navbar-collapse collapse'>
-            <ul class='nav navbar-nav'>
-                <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/home']">
-                        <span class='glyphicon glyphicon-home'></span> Home
-                    </a>
-                </li>
-                <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/counter']">
-                        <span class='glyphicon glyphicon-education'></span> Counter
-                    </a>
-                </li>
-                <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/users']">
-                        <span class='glyphicon glyphicon-user'></span> REST API Demo
-                    </a>
-                </li>
-              <li [routerLinkActive]="['link-active']">
-                <a [routerLink]="['/ng2-bootstrap']">
-                  <span class='glyphicon glyphicon-user'></span> ng2-Bootstrap demo
-                </a>
-              </li>
-                <!--<li [routerLinkActive]="['link-active']">
+      <a class='navbar-brand' [routerLink]="['/home']">Angular 4 Universal & ASP.NET Core </a>
+    </div>
+    <div class='clearfix'></div>
+    <div class='navbar-collapse collapse'>
+      <ul class='nav navbar-nav'>
+        <li [routerLinkActive]="['link-active']">
+          <a [routerLink]="['/home']">
+            <span class='glyphicon glyphicon-home'></span> {{ 'HOME' | translate }}
+          </a>
+        </li>
+        <li [routerLinkActive]="['link-active']">
+          <a [routerLink]="['/counter']">
+            <span class='glyphicon glyphicon-education'></span> {{ 'COUNTER' | translate }}
+          </a>
+        </li>
+        <li [routerLinkActive]="['link-active']">
+          <a [routerLink]="['/users']">
+            <span class='glyphicon glyphicon-user'></span> REST API Demo
+          </a>
+        </li>
+        <li [routerLinkActive]="['link-active']">
+          <a [routerLink]="['/ng2-bootstrap']">
+            <span class='glyphicon glyphicon-user'></span> ng2-Bootstrap demo
+          </a>
+        </li>
+        <!--<li [routerLinkActive]="['link-active']">
                     <a [routerLink]="['/chat']">
                         <span class='glyphicon glyphicon-comment'></span> Chat
                     </a>
                 </li>-->
-            </ul>
-        </div>
+      </ul>
     </div>
+  </div>
 </div>
