--- a/Client/app/app.component.scss
+++ b/Client/app/app.component.scss
@@ -3,8 +3,8 @@ $light-orange: #ff8c00;
 $navbar-default-color: $light-orange;
 
 /* Import Bootstrap & Fonts */
-$icon-font-path: '../../node_modules/bootstrap-sass/assets/fonts/bootstrap';
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+$icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
+@import "~bootstrap-sass/assets/stylesheets/bootstrap";
 
 
 
