add http-transfer mechanism (#179)
Closes #169
Closes #170

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@Html.Raw(ViewData["SpaHtml"])
 
 @section scripts {
+    <!-- Our webpack bundle -->
     <script src="~/dist/main-browser.js" asp-append-version="true"></script>
 }
