Updated naming for ngx-bootstrap

--- a/Client/app/components/navmenu/navmenu.component.html
+++ b/Client/app/components/navmenu/navmenu.component.html
@@ -28,7 +28,7 @@
           </a>
         </li>
         <li [routerLinkActive]="['link-active']">
-          <a [routerLink]="['/ng2-bootstrap']">
+          <a [routerLink]="['/ngx-bootstrap']">
             <span class='glyphicon glyphicon-th-large'></span> ngx-Bootstrap demo
           </a>
         </li>
