--- a/Client/app/containers/ngx-bootstrap-demo/ngx-bootstrap.component.html
+++ b/Client/app/containers/ngx-bootstrap-demo/ngx-bootstrap.component.html
@@ -1,7 +1,7 @@
-﻿<h1>Ng2-bootstrap Demo:</h1>
+﻿<h1>Ngx-bootstrap Demo:</h1>
 
 <blockquote>
-  <strong>Here we're using Bootstrap via <a href="https://github.com/valor-software/ng2-bootstrap">ng2-bootstrap</a>, which can even be rendered on the server!</strong>
+  <strong>Here we're using Bootstrap via <a href="https://github.com/valor-software/ngx-bootstrap">ngx-bootstrap</a>, which can even be rendered on the server!</strong>
   <br>
 </blockquote>
 
