Replaced ng2-bootstrap with ngx-bootstrap.

--- a/Client/app/containers/home/home.component.html
+++ b/Client/app/containers/home/home.component.html
@@ -41,7 +41,7 @@
         </ul>
       </li>
 
-      <li>Bootstrap (ng2-bootstrap) : Bootstrap capable of being rendered even on the server.</li>
+      <li>Bootstrap (ngx-bootstrap) : Bootstrap capable of being rendered even on the server.</li>
       <li>Unit testing via karma & jasmine.</li>
       <!--<li>e2e testing via protractor.</li>-->
     </ul>
