--- a/Client/app/components/navmenu/navmenu.component.css
+++ b/Client/app/components/navmenu/navmenu.component.css
@@ -1,4 +1,4 @@
-li .glyphicon {
+﻿li .glyphicon {
     margin-right: 10px;
 }
 
@@ -19,10 +19,51 @@ li.link-active a:focus {
     z-index: 1;
 }
 
+.icon-bar {
+  background-color: #4189C7;
+}
+
+
+@media (max-width: 767px) {
+  /* Apply for small displays */
+  .main-nav {
+    width: 100%;
+  }
+
+  .navbar-brand {
+    font-size: 14px;
+    background-color: #f1f1f1;
+  }
+  .navbar-toggle {
+    padding: 0px 5px;
+    margin-top: 0px;
+    height: 26px;
+  }
+
+  .navbar-link {
+    margin-top: 4px;
+    margin-left: 45px;
+    position: fixed;
+  }
+
+  .navbar-collapse {
+    background-color: white;
+  }
+
+  .navbar a {
+    /* If a menu item's text is too long, truncate it */
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding-right: 5px;
+  }
+}
+
 @media (min-width: 768px) {
     /* On small screens, convert the nav menu to a vertical sidebar */
     .main-nav {
         height: 100%;
+        max-width: 330px;
         width: calc(25% - 20px);
     }
     .navbar {
@@ -30,6 +71,13 @@ li.link-active a:focus {
         border-width: 0px;
         height: 100%;
     }
+    .navbar-brand{
+      width: 100%;
+    }
+  .navbar-link {
+    display: block;
+    width: 100%
+  }
     .navbar-header {
         float: none;
     }
@@ -51,7 +99,6 @@ li.link-active a:focus {
     }
     .navbar a {
         /* If a menu item's text is too long, truncate it */
-        width: 100%;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
