--- a/Client/app/components/navmenu/navmenu.component.html
+++ b/Client/app/components/navmenu/navmenu.component.html
@@ -1,16 +1,18 @@
-﻿<div class='main-nav'>
+<div class='main-nav'>
   <div class='navbar'>
     <div class='navbar-header'>
-      <button type='button' class='navbar-toggle' data-toggle='collapse' data-target='.navbar-collapse'>
-                <span class='sr-only'>Toggle navigation</span>
-                <span class='icon-bar'></span>
-                <span class='icon-bar'></span>
-                <span class='icon-bar'></span>
-            </button>
-      <a class='navbar-brand' [routerLink]="['/home']">Angular 4 Universal & ASP.NET Core </a>
+      <div class='navbar-brand'>
+        <button type='button' class='navbar-toggle' (click)="collapseNavbar()">
+          <span class='sr-only'>Toggle navigation</span>
+          <span class='icon-bar'></span>
+          <span class='icon-bar'></span>
+          <span class='icon-bar'></span>
+        </button>
+        <a [routerLink]="['/home']" class='navbar-link'>Angular 4 Universal & ASP.NET Core</a>
+      </div>
     </div>
     <div class='clearfix'></div>
-    <div class='navbar-collapse collapse'>
+    <div class='navbar-collapse {{collapse}}'>
       <ul class='nav navbar-nav'>
         <li [routerLinkActive]="['link-active']">
           <a [routerLink]="['/home']">
