--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@Html.Raw(ViewData["SpaHtml"])
 
+<script src="~/dist/vendor.js" asp-append-version="true"></script>
 @section scripts {
     <!-- Our webpack bundle -->
-    <script src="~/dist/main-browser.js" asp-append-version="true"></script>
+    <script src="~/dist/main-client.js" asp-append-version="true"></script>
 }
