fix(signal-r): updated signalr chatroom

--- a/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/ClientApp/app/components/navmenu/navmenu.component.html
@@ -39,11 +39,11 @@
             <span class='glyphicon glyphicon-star-empty'></span> Lazy-loaded demo
           </a>
         </li>
-        <!--<li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/chat']">
-                        <span class='glyphicon glyphicon-comment'></span> Chat
-                    </a>
-                </li>-->
+        <li [routerLinkActive]="['link-active']">
+            <a [routerLink]="['/chat']">
+                <span class='glyphicon glyphicon-comment'></span> Chat
+            </a>
+        </li>
       </ul>
     </div>
   </div>
