--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,32 +1,35 @@
 ﻿<!DOCTYPE html>
 <html>
-    <head>
-        <base href="/" />
-        <title>@ViewData["Title"]</title>
+  <head>
+    <base href="/" />
+    <title>@ViewData["Title"]</title>
 
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        @Html.Raw(ViewData["Meta"])
-        @Html.Raw(ViewData["Links"])
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    @Html.Raw(ViewData["Meta"])
+    @Html.Raw(ViewData["Links"])
 
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/0.8.2/css/flag-icon.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/0.8.2/css/flag-icon.min.css" />
+    <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
 
-        @Html.Raw(ViewData["Styles"])
+    @Html.Raw(ViewData["Styles"])
 
-    </head>
-    <body>
-        @RenderBody()
+  </head>
+  <body>
+    @RenderBody()
 
-        <!-- remove if you're not going to use SignalR -->
-        <script src="https://code.jquery.com/jquery-2.2.4.min.js"
-                integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-                crossorigin="anonymous"></script>
+    <!-- *** NOTE *** Remove this and the signalr script include below
+             - if you're NOT going to use SignalR -->
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"
+            integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+            crossorigin="anonymous"></script>
 
-        <script src="http://ajax.aspnetcdn.com/ajax/signalr/jquery.signalr-2.2.0.min.js"></script>
+    <script src="http://ajax.aspnetcdn.com/ajax/signalr/jquery.signalr-2.2.1.min.js"></script>
 
-        <!-- Here we're passing down any data to be used by grabbed and parsed by Angular -->
-        @Html.Raw(ViewData["TransferData"])
+    <!-- Here we're passing down any data to be used by grabbed and parsed by Angular -->
+    @Html.Raw(ViewData["TransferData"])
 
-        @RenderSection("scripts", required: false)
-    </body>
+    @RenderSection("scripts", required: false)
+
+  </body>
 </html>
