--- a/ClientApp/app/components/user-detail/user-detail.component.html
+++ b/ClientApp/app/components/user-detail/user-detail.component.html
@@ -1,9 +1,9 @@
-﻿<div *ngIf="user">
+<div *ngIf="user">
   <h2>{{user.name}} details:</h2>
   <div><label>id: </label>{{user.id}}</div>
   <div>
     <label>name: </label>
     <input [(ngModel)]="user.name" placeholder="name" #details="ngModel" />
   </div>
-  <button [class.disabled]="details.pristine" class="btn btn-success" (click)="updateUser(user)">Save</button>
+  <button [class.disabled]="details.pristine" *ngIf="isAuthenticated" class="btn btn-success" (click)="updateUser(user)">Save</button>
 </div>
