Mangling and compress options disabled for Server bundle to fix preboot script issue. Removed duplicated Bootstrap css from vendor bundle

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     @Html.Raw(ViewData["Links"])
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/0.8.2/css/flag-icon.min.css" />
-    <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
+    <!-- <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" /> -->
 
     @Html.Raw(ViewData["Styles"])
 
