fix(bug): fix 404 and build issues

--- a/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/ClientApp/app/components/navmenu/navmenu.component.html
@@ -39,11 +39,11 @@
             <span class='glyphicon glyphicon-star-empty'></span> Lazy-loaded demo
           </a>
         </li>
-        <li [routerLinkActive]="['link-active']" (click)="collapseMenu()">
+        <!-- <li [routerLinkActive]="['link-active']" (click)="collapseMenu()">
           <a [routerLink]="['/chat']">
             <span class='glyphicon glyphicon-comment'></span> Chat
           </a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </div>
