--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <base href="/" />
+    <base href="@(Url.Content("~/"))" />
     <title>@ViewData["Title"]</title>
 
     <meta charset="utf-8" />
