--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,2 +1,4 @@
 @using AspCoreServer
 @addTagHelper "*, Microsoft.AspNetCore.SpaServices"
+@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
+  
